--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@ chardet==3.0.4
 Django==1.11.11
 DjangoUeditor==1.8.143
 get==0.0.39
+gunicorn==19.8.1
 idna==2.6
 itsdangerous==0.24
+Markdown==2.6.11
 Pillow==5.0.0
 post==0.0.26
 public==0.0.65
+Pygments==2.2.0
 pytz==2018.3
 query-string==0.0.28
 request==0.0.26
 requests==2.18.4
 urllib3==1.22
-uWSGI==2.0.15
+uWSGI==2.0.17
